# search_tests

./: .coveragerc  .editorconfig  .gitignore  README.rst  commands.py  local.yml  manage.py  notebook.yml  production.yml  pyproject.toml
.envs/.local/: .postgres
compose/local/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  index.rst
notebooks/: small_tests.ipynb
requirements/: base.txt  production.txt
search_tests/: conftest.py
search_tests/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
search_tests/documents/: apps.py  models.py
search_tests/documents/migrations/: 0001_initial.py
search_tests/templates/: base.html
search_tests/users/: admin.py  apps.py  urls.py
search_tests/users/api/: serializers.py
search_tests/users/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
