[tool.poetry]
name = "search_tests"
version = "0.1.0"
description = ""
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>"]
license = "MIT"
packages = [
    { include = "./commands.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
pytz = "^2019.3"
python-slugify = "^4.0.0"
Pillow = "^7.0.0"
argon2-cffi = "^19.2.0"
redis = "^3.4.1"
django-environ = "^0.4.5"
django-model-utils = "^4.0.0"
django-allauth = "^0.41.0"
django-crispy-forms = "^1.8.1"
django-redis = "^4.11.0"
djangorestframework = "^3.11.0"
django-watson = "^1.5.4"
typer = "^0.0.8"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]
Werkzeug = "^2.2.3"
Sphinx = "^2.4.3"
ipdb = "^0.12.3"
mypy = "^0.761"
django-stubs = "^1.4.0"
pytest = "^5.3.5"
pytest-sugar = "^0.9.2"
flake8 = "^3.7.9"
coverage = "^5.0.3"
black = "^19.10b0"
pylint-django = "^2.0.13"
factory-boy = "^2.12.0"
django-debug-toolbar = "^2.2"
django-extensions = "^2.2.8"
pytest-django = "^3.8.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
